--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ server: # REST and WS server
   address: 0.0.0.0
 lavalink:
   server:
-    password: "davix9895"
+    password: "youshallnotpass"
     sources:
       youtube: true
       bandcamp: true
